last commit from bash

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <section>
-    <h1>Hola mundo desde {{ city }}</h1>
-    <app-user />
+   <!-- <app-user /> -->
+   <app-blog />
 </section>
 
 <router-outlet />
