--- a/src/app/games/games.component.html
+++ b/src/app/games/games.component.html
@@ -1,1 +1,6 @@
-<p>games works!</p>
+<ul>
+  <h3>Los juegos favoritos de {{ username }}</h3>
+  @for (game of games; track game.id) {
+    <li (click)="selectGame(game.name)">{{ game.name }}</li>
+  }
+</ul>
