--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -4,3 +4,25 @@ section {
     padding-top: 32px;
     font-size: 24px;
 }
+
+img{
+    width: 64px;
+    height: 64px;
+    border-radius: 50%;
+}
+
+button{
+    cursor: pointer;
+    padding: 8px 16px;
+    font-size: 14px;
+    background-color: #fff;
+    border: 1px solid #000;
+    border-radius: 8px;
+    transition: all 0.2s;
+    color: #000;
+}
+
+button:hover{
+    background-color: #2a14e8;
+    color: #fff;
+}
