--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,7 +1,20 @@
 <section>
   @if (isLogguedIn) {
   <h1>Bienvenido {{ username }}</h1>
+  <img
+    (click)="greet()"
+    src="https://github.com/carloscaudillo11.png"
+    alt="photo"
+  />
   } @else {
-  <h1>Inicia sesion</h1>
+  <h1>Iniciar sesión</h1>
+  <button (click)="isLogguedIn = true">Log in</button>
+  }
+  <app-games
+    (addFavoriteEvent)="getFavGame($event)"
+    username="{{ username }}"
+  />
+  @if(favoriteGame !== ''){
+    <p>El juego favorito de {{ username }} es: {{ favoriteGame }}</p>
   }
 </section>
